Connecting cloudinary to the project to have the ability to save and present photos

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Exclude Cloudinary config file with sensitive information
+**/CloudinaryConfig.kt
